updated the yaml file

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -2,7 +2,7 @@ name: deploy-container
 
 on: 
   push:
-    branch:
+    branches:
       - main
     paths:
       - 'container/**'
@@ -16,12 +16,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - run: npm install
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
+
+      - run: aws configure set region us-east-1
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
